Fix events banner being too high due to #62 Take year group calendar offline

--- a/frontend/src/scss/tabs.scss
+++ b/frontend/src/scss/tabs.scss
@@ -54,8 +54,3 @@
 	}
 }
 
-@media screen and (max-height: 650px) {
-	.r-tab-row {
-		position: relative !important; // Fix #62 where tabs overlapped - can't apply generally as messes with desktop spacing
-	}
-}
